<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.yingshiyuan.starpark.activity.MainActivity">
    <item
        android:id="@+id/action_custom_service"
        android:orderInCategory="10"
        android:title="@string/action_custom_service"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_scan"
        android:orderInCategory="11"
        android:title="@string/action_scan"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:orderInCategory="1"
        android:title="搜索"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />

</menu>
