<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/invoiceHeader_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_invoice_header"
                android:inputType="text"
                android:maxLength="12"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/project_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_project"
                android:imeOptions="actionUnspecified"
                android:inputType="phone"
                android:maxLength="20"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/money_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_money"
                android:inputType="text"
                android:maxLength="20"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/consignee_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_consignee"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1"
                android:minLines="6"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/consigneeAddress_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_consignee_address"
                android:inputType="text"
                android:maxLength="20"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/consigneeContactNumber_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_consignee_contact_number"
                android:inputType="text"
                android:maxLength="50"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/submit_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/action_submit"
                android:textStyle="bold" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
