<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingTop="20dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
    <TextView
        android:id="@+id/login_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:drawableTop="@drawable/unlogined_selector"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/me_register"
        android:textColor="@color/text_color_white_red_selector" />
    <RelativeLayout
        android:id="@+id/logined_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/logined_iv"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_dressbook" />

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/logined_iv"
            android:text="@string/me_logined"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/exit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:text="@string/exit_btn"
            android:textColor="@color/white" />

    </RelativeLayout>
</FrameLayout>
