<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include
        layout="@layout/top_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/creditCode_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/prompt_credit_code"
                    android:inputType="text"
                    android:maxLength="12"
                    android:singleLine="true"
                    android:text="1001001000010000" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/companyName_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/prompt_company_name"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:text="北京马蜂窝食品科技有限公司" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/companyType_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/prompt_company_type"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:text="有限责任公司" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/companyAddress_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/prompt_company_address"
                    android:inputType="text"
                    android:text="北京市大兴区北兴路东段2号星光影视园A座105室09号" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/juridicalPerson_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/prompt_juridical_person"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="张富贵" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/registeredCapital_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/prompt_registered_capital"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="肆佰伍拾万" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/dateEstablishment_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/prompt_date_establishment"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="2016年8月18日" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/operatingPeriod_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/prompt_operating_period"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="2016年8月18日至2030年12月31日" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/scopeBusiness_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/prompt_scope_of_business"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="食品研发,食品批发,食品销售" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/department_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/prompt_department"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="北京大兴工商分局" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingRight="5dp">

                    <ImageView
                        android:id="@+id/originalBusinessLicence_iv"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:clickable="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/id_front_selector" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/originalBusinessLicence_iv"
                        android:gravity="center"
                        android:text="@string/prompt_business_licence_original" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5dp">

                    <ImageView
                        android:id="@+id/carbonBusinessLicence_iv"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/id_back_selector" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/carbonBusinessLicence_iv"
                        android:gravity="center"
                        android:text="@string/prompt_business_licence_carbon" />
                </RelativeLayout>

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/sendToMailbox_btn"
                    style="?android:textAppearanceSmall"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="16dp"
                    android:text="发送至邮箱"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
